Update README.md
add environment setup information